--- a/views/index.erb
+++ b/views/index.erb
@@ -1,52 +1,67 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Debaser</title>
 
-    <link rel="stylesheet" href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-combined.min.css">
-    <link rel="stylesheet" href="/lib/codemirror-3.02/lib/codemirror.css">
-    <link rel="stylesheet" href="/lib/codemirror-3.02/theme/monokai.css">
-    <link rel="stylesheet" href="/css/app.css">
-
-    <script src="//code.jquery.com/jquery-1.9.0.min.js"></script>
-    <!-- <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/js/bootstrap.min.js"></script> -->
-    <script src="/lib/codemirror-3.02/lib/codemirror.js"></script>
-    <script src="/lib/codemirror-3.02/mode/sql/sql.js"></script>
-    <script src="/js/app.js"></script>
+    <link rel="stylesheet" href="components/bootstrap/docs/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="components/codemirror/lib/codemirror.css">
+    <link rel="stylesheet" href="components/codemirror/theme/monokai.css">
+    <link rel="stylesheet" href="css/app.css">
   </head>
+
   <body>
     <div class="container">
       <div class="row">
-        <div class="span12">
-          <form action='/query' method='POST' class='form-horizontal'>
+        <form id='sql-editor' action='/query' method='POST' class='form-horizontal span12'>
 
-               <div class="control-group">
-                <div class='controlsX'>
-                  <select name="connection">
-                    <% @connections.each do |c| %>
-                    <option><%= c %></option>
-                    <% end %>
-                  </select>
-                </div>
-              </div>
+             <div class="control-group">
+              <select name="connection">
+                <% @connections.each do |c| %>
+                <option><%= c %></option>
+                <% end %>
+              </select>
+            </div>
 
-              <div class="control-group">
-                <div class='controlsX' id='editor-container'>
-                  <textarea id='query-editor' name='q' rows="10" placeholder='Enter SQL Here'></textarea>
-                </div>
-              </div>
+            <div class="control-group">
+              <textarea name='q' rows="10" placeholder='Enter SQL Here'></textarea>
+            </div>
 
-
-              <div class="control-group">
-                <div class='controlsX'>
-                  <button type='submit' class='btn btn-primary'>Run</button>
-                </div>
-              </div>
-
-          </form>
-        </div>
+            <div class="control-group">
+              <button type='submit' class='btn btn-primary'>Run</button>
+            </div>
+        </form>
+      </div>
+      <div id='query-results' class="row">
+        RESULTS
       </div>
     </div>
+
+    <script src="components/jquery/jquery.js"></script>
+    <script src="components/bootstrap/docs/assets/js/bootstrap.js"></script>
+    <script src="components/codemirror/lib/codemirror.js"></script>
+    <script src="components/codemirror/mode/sql/sql.js"></script>
+    <script src="components/es5-shim/es5-shim.js"></script>
+    <script src="components/es5-shim/es5-sham.js"></script>
+    <script data-main="require-main.js" src="components/requirejs/require.js"></script>
+    <script type="text/javascript">
+      require(
+        [
+          'components/flight/lib/compose',
+          'components/flight/lib/registry',
+          'components/flight/lib/advice',
+          'components/flight/lib/logger',
+          'components/flight/tools/debug/debug'
+        ],
+
+        function(compose, registry, advice, withLogging, debug) {
+          debug.enable(true);
+          compose.mixin(registry, [advice.withAdvice, withLogging]);
+          require(['js/boot'], function(initialize) {
+            initialize();
+          });
+        }
+      );
+    </script>
   </body>
 </html>
