--- a/views/index.erb
+++ b/views/index.erb
@@ -32,36 +32,36 @@
             </div>
         </form>
       </div>
-      <div id='query-results' class="row">
+      <div id='query-result' class="row">
         RESULTS
       </div>
     </div>
 
-    <script src="components/jquery/jquery.js"></script>
-    <script src="components/bootstrap/docs/assets/js/bootstrap.js"></script>
-    <script src="components/codemirror/lib/codemirror.js"></script>
-    <script src="components/codemirror/mode/sql/sql.js"></script>
-    <script src="components/es5-shim/es5-shim.js"></script>
-    <script src="components/es5-shim/es5-sham.js"></script>
-    <script data-main="require-main.js" src="components/requirejs/require.js"></script>
+    <!-- // <script src="components/jquery/jquery.js"></script> -->
+    <!-- // <script src="components/bootstrap/docs/assets/js/bootstrap.js"></script> -->
+    <!-- // <script src="components/codemirror/lib/codemirror.js"></script> -->
+    <!-- // <script src="components/codemirror/mode/sql/sql.js"></script> -->
+    <!-- // <script src="components/es5-shim/es5-shim.js"></script> -->
+    <!-- // <script src="components/es5-shim/es5-sham.js"></script> -->
+    <script data-main="require_main" src="components/requirejs/require.js"></script>
     <script type="text/javascript">
-      require(
-        [
-          'components/flight/lib/compose',
-          'components/flight/lib/registry',
-          'components/flight/lib/advice',
-          'components/flight/lib/logger',
-          'components/flight/tools/debug/debug'
-        ],
+      // require(
+      //   [
+      //     'components/flight/lib/compose',
+      //     'components/flight/lib/registry',
+      //     'components/flight/lib/advice',
+      //     'components/flight/lib/logger',
+      //     'components/flight/tools/debug/debug'
+      //   ],
 
-        function(compose, registry, advice, withLogging, debug) {
-          debug.enable(true);
-          compose.mixin(registry, [advice.withAdvice, withLogging]);
-          require(['js/boot'], function(initialize) {
-            initialize();
-          });
-        }
-      );
+      //   function(compose, registry, advice, withLogging, debug) {
+      //     debug.enable(true);
+      //     compose.mixin(registry, [advice.withAdvice, withLogging]);
+      //     require(['js/boot'], function(initialize) {
+      //       initialize();
+      //     });
+      //   }
+      // );
     </script>
   </body>
 </html>
