--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Debaser</title>
 
-    <link rel="stylesheet" href="components/bootstrap/docs/assets/css/bootstrap.css">
+    <link rel="stylesheet" href="components/normalize-css/normalize.css">
     <link rel="stylesheet" href="components/codemirror/lib/codemirror.css">
     <link rel="stylesheet" href="components/codemirror/theme/monokai.css">
     <link rel="stylesheet" href="css/app.css">
@@ -12,56 +12,53 @@
 
   <body>
     <div class="container">
-      <div class="row">
-        <form id='sql-editor' action='/query' method='POST' class='form-horizontal span12'>
+      <div id="query-editor" class="query-editor">
+        <form id='sql-editor' action='/query' method='POST'>
+          <div class="toolbar">
+            <select name="connection">
+              <% @connections.each do |c| %>
+              <option><%= c %></option>
+              <% end %>
+            </select>
+          </div>
 
-             <div class="control-group">
-              <select name="connection">
-                <% @connections.each do |c| %>
-                <option><%= c %></option>
-                <% end %>
-              </select>
-            </div>
+          <textarea name='q' rows="10" placeholder='Enter SQL Here'></textarea>
 
-            <div class="control-group">
-              <textarea name='q' rows="10" placeholder='Enter SQL Here'></textarea>
-            </div>
-
-            <div class="control-group">
-              <button type='submit' class='btn btn-primary'>Run</button>
-            </div>
+          <div class="toolbar">
+            <button type='submit' class='run-query'>Run</button>
+          </div>
         </form>
       </div>
-      <div id='query-result' class="row">
-        RESULTS
-      </div>
+
+      <div id='query-result' class='query-result'></div>
     </div>
 
-    <!-- // <script src="components/jquery/jquery.js"></script> -->
-    <!-- // <script src="components/bootstrap/docs/assets/js/bootstrap.js"></script> -->
-    <!-- // <script src="components/codemirror/lib/codemirror.js"></script> -->
-    <!-- // <script src="components/codemirror/mode/sql/sql.js"></script> -->
-    <!-- // <script src="components/es5-shim/es5-shim.js"></script> -->
-    <!-- // <script src="components/es5-shim/es5-sham.js"></script> -->
-    <script data-main="require_main" src="components/requirejs/require.js"></script>
-    <script type="text/javascript">
-      // require(
-      //   [
-      //     'components/flight/lib/compose',
-      //     'components/flight/lib/registry',
-      //     'components/flight/lib/advice',
-      //     'components/flight/lib/logger',
-      //     'components/flight/tools/debug/debug'
-      //   ],
-
-      //   function(compose, registry, advice, withLogging, debug) {
-      //     debug.enable(true);
-      //     compose.mixin(registry, [advice.withAdvice, withLogging]);
-      //     require(['js/boot'], function(initialize) {
-      //       initialize();
-      //     });
-      //   }
-      // );
+    <script id='query-result-template' type="text/html">
+      <table>
+        <thead>
+          <tr>
+            {{#columnNames}}
+            <th>{{.}}</th>
+            {{/columnNames}}
+          </tr>
+        </thead>
+        <tbody>
+          {{#rows}}
+          <tr>
+            {{#.}}
+              <td>{{.}}</td>
+            {{/.}}
+          </tr>
+          {{/rows}}
+        </tbody>
+      </table>
     </script>
+
+    <script src="components/jquery/jquery.js"></script>
+    <script src="components/underscore/underscore.js"></script>
+    <script src="components/mustache.js/mustache.js"></script>
+    <script src="components/codemirror/lib/codemirror.js"></script>
+    <script src="components/codemirror/mode/sql/sql.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
