--- a/views/index.erb
+++ b/views/index.erb
@@ -4,10 +4,7 @@
     <meta charset="utf-8">
     <title>Debaser</title>
 
-    <link rel="stylesheet" href="components/normalize-css/normalize.css">
-    <link rel="stylesheet" href="components/codemirror/lib/codemirror.css">
-    <link rel="stylesheet" href="components/codemirror/theme/monokai.css">
-    <link rel="stylesheet" href="css/app.css">
+    <link rel="stylesheet" href="/assets/app.css">
   </head>
 
   <body>
@@ -54,11 +51,6 @@
       </table>
     </script>
 
-    <script src="components/jquery/jquery.js"></script>
-    <script src="components/underscore/underscore.js"></script>
-    <script src="components/mustache.js/mustache.js"></script>
-    <script src="components/codemirror/lib/codemirror.js"></script>
-    <script src="components/codemirror/mode/sql/sql.js"></script>
-    <script src="js/app.js"></script>
+    <script src="/assets/app.js"></script>
   </body>
 </html>
